<resources>
    <string name="app_name">ReviewSphere</string>
    <string name="title">ReviewSphere</string>
    <string name="open_start_btn">Start</string>
    <string name="mode_select">Choose Your Mode</string>
    <string name="flashcards">Flashcards</string>
    <string name="notebook">Notebook</string>
    <string name="quizzes">Quizzes</string>
    <string name="home">Home</string>
    <string name="wheel">Wheel</string>
    <string name="strips">Strips</string>
    <string name="ToF">True or False</string>
    <string name="matching">Matching</string>
    <string name="achieve">Achievements</string>
    <string name="exit">Do you wish to exit?</string>
    <string name="save_warning">Progress may not be save</string>
    <string name="confirm">Confirm</string>
    <string name="deny">Cancel</string>
    <string name="score_txt">You Have Scored</string>
    <string name="score_divider">Over</string>
    <string name="success">You Passed</string>
    <string name="fail">Better Luck Next Time</string>
    <string name="base">00</string>
    <string name="welcome">Welcome</string>
    <string name="loading">Loading... \n Please wait a moment</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="word_title">Title</string>
    <string name="choose_topic">Choose Topic</string>
    <string name="answer">Answer</string>
    <string name="spin">Spin</string>
    <string name="tama">True</string>
    <string name="mali">False</string>
    <string name="next">Next</string>
    <string name="pick">Pick a Strip</string>
    <string name="accounts">Account</string>
    <string name="tagline_quiz">Answer the Questions Below</string>
    <string name="submit">Submit</string>
    <string name="copyright">Copyright © 2024 Aquino, Avila, Estayan, Rosario.\n All rights reserved..</string>
    <string name="showAnswer">Show Answer</string>
    <string name="login">"Login"</string>
    <string name="sign_up">"Sign Up"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="creds">Credentials</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="noacc">Don\'t have an account?</string>
    <string name="yesacc">You already have an account?</string>
    <string name="username">Full Name</string>
    <string name="addinfo">Additional \n Information</string>
    <string name="subjecttitle">Subject Title</string>
    <string name="newsubjecttitle">New Subject Title</string>
    <string name="topic">Topic</string>
    <string name="newtopic">New Topic</string>
    <string name="optional">Optional</string>
    <string name="term">Term</string>
    <string name="definition">Definition</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="school">School</string>
    <string name="plays">Plays</string>
    <string name="forimport">Import</string>
    <string name="forexport">Export</string>
    <string name="pick1">1st Pick</string>
    <string name="pick2">2nd Pick</string>
    <string name="mastered">Mastered</string>
    <string name="learning">Learning</string>
    <string name="name">Name</string>
    <string name="msg">WARNING \n Restart is required to update changes</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Prefer not to say</item>
    </string-array>
    <string-array name="gradelevel">
        <item>Grade 7</item>
        <item>Grade 8</item>
        <item>Grade 9</item>
        <item>Grade 10</item>
        <item>Grade 11</item>
        <item>Grade 12</item>
        <item>1st Year College</item>
        <item>2nd Year College</item>
        <item>3rd Year College</item>
        <item>4th Year College</item>
    </string-array>
    <string-array name="filetype">
        <item>JSON</item>
        <item>PDF</item>
        <item>Docs</item>
    </string-array>
</resources>